Exploring Quick Find sitemap parent/grandparent structure [amends #103]

--- a/_sass/components/_ds.sitemap.scss
+++ b/_sass/components/_ds.sitemap.scss
@@ -10,7 +10,11 @@
     @include reset-ul();
     margin-top: .5em;
 
-    // &--root {}
+    &--root {
+      @include breakpoint(L) {
+        display: flex;
+      }
+    }
 
     &:not(.ds-sitemap__list--root) {
       margin-left: $branch-width / 2;
@@ -23,7 +27,11 @@
     @include reset-li();
     margin-bottom: .5em;
 
-    // &--root {}
+    &--root {
+      @include breakpoint(XL) {
+        flex: 1;
+      }
+    }
 
     &:not(.ds-sitemap__list-item--root) {
 
@@ -69,4 +77,11 @@
 
   }
 
+}
+
+[data-parent] {
+  outline: 1px solid orangered;
+}
+[data-grandparent] {
+  // outline: 1px solid blue;
 }
