--- a/css/fsa-design-system.css
+++ b/css/fsa-design-system.css
@@ -15367,6 +15367,13 @@ pre.highlight .ds-clipboard {
   margin-top: .5em;
 }
 
+@media (min-width: 54em) {
+  .ds-sitemap__list--root {
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .ds-sitemap__list:not(.ds-sitemap__list--root) {
   margin-left: 12px;
   margin-left: 1.2rem;
@@ -15377,6 +15384,13 @@ pre.highlight .ds-clipboard {
   margin: 0;
   padding: 0;
   margin-bottom: .5em;
+}
+
+@media (min-width: 78.75em) {
+  .ds-sitemap__list-item--root {
+    -ms-flex: 1;
+        flex: 1;
+  }
 }
 
 .ds-sitemap__list-item:not(.ds-sitemap__list-item--root) {
@@ -15414,6 +15428,10 @@ pre.highlight .ds-clipboard {
 .ds-sitemap__link--root {
   font-weight: 700;
   text-decoration: none;
+}
+
+[data-parent] {
+  outline: 1px solid orangered;
 }
 
 .your-custom-list {
